# reach

./: .clang-format  meson.build  run.bat  run.sh  run_wasm.sh  setup.bat  setup.sh  setup_wasm.sh  shell.html
assets/glb/: challenger.glb  test.glb
src/: app.cpp  app.hpp  fatal.hpp  impl.c  impl.cpp  log.hpp  main.cpp  nocopy.hpp  renderer.cpp  renderer.hpp  transform.hpp  window.cpp  window.hpp  world.cpp  world.hpp
src/components/: camera_component.hpp  material_component.hpp  mesh_component.hpp  transform_component.hpp
src/data/: mesh_data.cpp  mesh_data.hpp  prefab.hpp
src/manager/: device_manager.cpp  device_manager.hpp  input_manager.cpp  input_manager.hpp  manager.hpp  material_manager.cpp  material_manager.hpp  model_manager.cpp  model_manager.hpp  physics_manager.cpp  physics_manager.hpp  renderer_manager.cpp  renderer_manager.hpp  ui_manager.cpp  ui_manager.hpp  window_manager.cpp  window_manager.hpp
src/shader/: immediate.glsl  immediate.hlsl  shader.cfg  unlit.glsl  unlit.hlsl
src/systems/: player_system.cpp  player_system.hpp  render_system.cpp  render_system.hpp  terrain_system.cpp  terrain_system.hpp  transform_system.cpp  transform_system.hpp
src/utils/: conditions.hpp  log.hpp  panic.hpp
subprojects/JoltPhysics/: meson.build
subprojects/cgltf/: meson.build
subprojects/rjm/: meson.build  rjm_mc.h
subprojects/sokol/: meson.build
